--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,17 @@
 .App {
     text-align: center;
+    background-color: #282c34;
+    min-height: 100vh;
+    min-width: 100vw;
 }
 
 .App-logo {
-    height: 40vmin;
+    max-width: 60vw;
     pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
-}
 
 .App-header {
-    background-color: #282c34;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -28,11 +25,3 @@
     color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
